<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">PhhTrebleApp</string>
    <string name="applied_update_title">Update applied successfully</string>
    <string name="applying_update_title">Applying system update</string>
    <string name="checking_update_title">Checking for available update</string>
    <string name="continue_question">Continue?</string>
    <string name="copy">Copy</string>
    <string name="delete_ota_message">Take in consideration that you may lose your userdata if you proceed!\nTo prevent this, cancel this dialog, reboot and flash the latest update on fastboot mode.\nDo you want to proceed anyway?</string>
    <string name="desc_activity_top_level">Device specific settings</string>
    <string name="downloading_update_title">Downloading system update</string>
    <string name="dynamic_device_message">Your device does not support OTA updates!</string>
    <string name="error_dialog_title">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="failed_download_message">New update failed to be downloaded.\nCheck your logs for more information.</string>
    <string name="failed_install_message">New update failed to be installed.\nCheck your logs for more information.</string>
    <string name="magisk_exists_message">Magisk was detected! If you proceed with the update you may lose Magisk or the installation may fail!</string>
    <string name="menu_delete_ota">Delete OTA files</string>
    <string name="not_set">Not set</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="preparing_update_title">Preparing system update</string>
    <string name="prevent_exit_message">The update is still ongoing. Leaving the app now will stop it.\nDo you really want to exit now?</string>
    <string name="remove_root">Remove Root</string>
    <string name="remove_telephony_subsystem">Remove Telephony Subsystem</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="success_install_message">New update installed successfully.\nPlease, reboot now.</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_top_level">Phh Treble Settings</string>
    <string name="title_activity_updater">Updater</string>
    <string name="update_error_message">An error has occurred during download!\nPlease, try again later.</string>
    <string name="update_found_button">Download and install</string>
    <string name="update_found_title">System update available</string>
    <string name="update_not_found_button">Check for update</string>
    <string name="update_not_found_title">Your system is up to date</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="Display_Mode">Display Mode</string>
    <string name="High_brightnessmode">High brightness mode</string>
    <string name="Other">Other</string>
    <string name="Enable_DT2W">Enable DT2W</string>
    <string name="EUO">Enable USB OTG</string>
    <string name="Display_res_0x7f0f0045">Display</string>
    <string name="MN">Mobile Network</string>
    <string name="Audio">Audio</string>
    <string name="Display_res_0x7f0f0048">Display</string>
    <string name="Restart_SystemUI">Restart SystemUI</string>
    <string name="Backlight">Backlight</string>
    <string name="Camera">Camera</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Telephony">Telephony</string>
    <string name="Other_O2">Other</string>
    <string name="Secure_adb">Secure adb</string>
    <string name="Debugging">Debugging</string>
    <string name="Debug_Sensors">Debug Sensors</string>
    <string name="Manh">Maintainer for my device</string>
    <string name="Command_Devhi">电报群</string>
    <string name="Recommended_SystemUI">Recommended after switching display resolution Requires root</string>
    <string name="ADB_Sou">Computer requires approval</string>
</resources>
